--- a/ZH/zhNet_Core/demo/tcp_client/Makefile
+++ b/ZH/zhNet_Core/demo/tcp_client/Makefile
@@ -1,27 +1,27 @@
 # Project: client
 
-CC = gcc
+CC = /bin/gcc
 RES  = 
-OBJ  = main.o ../lib/platform.o ../lib/packet.o ../lib/socket.o ../lib/session.o ../lib/encrypt.o ../lib/list.o $(RES)
-LINKOBJ  = main.o ../lib/platform.o ../lib/packet.o ../lib/socket.o ../lib/session.o ../lib/encrypt.o ../lib/list.o $(RES)
+OBJ  = main.o ../lib/platform.o ../lib/packet.o ../lib/socket.o ../lib/session.o ../lib/packet_heap.o ../lib/netlist.o $(RES)
+LINKOBJ  = main.o ../lib/platform.o ../lib/packet.o ../lib/socket.o ../lib/session.o ../lib/packet_heap.o ../lib/netlist.o $(RES)
 LIBS =  
-INCS = 
+INCS = -I ../lib
 CXXINCS = 
-BIN  = ../bin/client.exe
+BIN  = ./client.exe
 CXXFLAGS = $(CXXINCS)  
 CFLAGS = $(INCS)  
 RM = rm -f
 
 .PHONY: all all-before all-after clean clean-custom
 
-all: all-before ../bin/client.exe all-after
+all: all-before ./client.exe all-after
 
 
 clean: clean-custom
 	${RM} $(OBJ) $(BIN)
 
 $(BIN): $(OBJ)
-	$(CC) $(LINKOBJ) -o "../bin/client.exe" -pthread$(LIBS)
+	$(CC) $(LINKOBJ) -o "./client.exe" -pthread$(LIBS)
 
 main.o: main.c
 	$(CC) -c main.c -o main.o $(CFLAGS)
@@ -38,9 +38,9 @@ main.o: main.c
 ../lib/session.o: ../lib/session.c 
 	$(CC) -c ../lib/session.c -o ../lib/session.o $(CFLAGS)
 
-../lib/encrypt.o: ../lib/encrypt.c
-	$(CC) -c ../lib/encrypt.c -o ../lib/encrypt.o $(CFLAGS)
+../lib/packet_heap.o: ../lib/packet_heap.c
+	$(CC) -c ../lib/packet_heap.c -o ../lib/packet_heap.o $(CFLAGS)
 
-../lib/list.o: ../lib/list.c
-	$(CC) -c ../lib/list.c -o ../lib/list.o $(CFLAGS)
+../lib/netlist.o: ../lib/netlist.c
+	$(CC) -c ../lib/netlist.c -o ../lib/netlist.o $(CFLAGS)
 
